# go

./: CLAUDE.md  CMakeLists.txt  Makefile  README.md  benchmark.cpp  ctest.sh  make.sh  patterns.txt  run.sh
include/Service/: CheckMoveService.h
include/board/: Board.h  Board.hpp  CheckMovesService.h  CheckWinService.hpp  Stone.h
include/display/: DisplayService.hpp
include/display/components/: Button.hpp
include/display/scenes/: AbstractScene.hpp  BoardScene.hpp  DoubleStonesScene.hpp  MainMenuScene.hpp  ProOpeningScene.hpp  PvEScene.hpp  PvPScene.hpp
include/display/utils/: getSharedFont.hpp  loadSound.hpp
include/minmax/: FastEvaluator.hpp  GameState.hpp  MinMax.hpp  MoveGenerator.hpp  MoveOrdering.hpp  TranspositionTable.hpp  ZobristHash.hpp  minimax.hpp
include/services/: AIService.hpp  AlignmentChecker.hpp  CaptureService.hpp  CheckLegalMove.hpp  CheckMoveService.h  CheckMoveService.hpp  CheckWinService.hpp  EvaluationService.hpp  FreeThreeService.h  HeuristicService.h  HeuristicService.hpp  JsonService.hpp
include/structs/: AiPlay.hpp  Direction.hpp  IllegalMoves.hpp  LineBlockState.hpp  Pattern.hpp  Position.hpp  scores.hpp
src/: main.cpp
src/Service/: CheckMoveService.cpp
src/board/: Board.cpp  CheckMovesService.cpp  CheckWinService.cpp  Stone.cpp
src/display/: DisplayService.cpp
src/display/components/: Button.cpp
src/display/scenes/: BoardScene.cpp  DoubleStonesScene.cpp  MainMenuScene.cpp  ProOpeningScene.cpp  PvEScene.cpp  PvPScene.cpp
src/display/utils/: getSharedFont.cpp  loadSound.cpp
src/minmax/: FastEvaluator.cpp  GameState.cpp  MinMax.cpp  MoveGenerator.cpp  MoveOrdering.cpp  TranspositionTable.cpp  ZobristHash.cpp  minimax.cpp
src/services/: AIService.cpp  AlignmentChecker.cpp  CaptureService.cpp  CheckLegalMove.cpp  CheckMoveService.cpp  CheckWinService.cpp  EvaluationService.cpp  FreeThreeService.cpp  HeuristicService.cpp  JsonService.cpp
tests/: CMakeLists.txt
tests/board/: BoardTest.cpp
tests/minmax/: MinMaxTest.cpp
tests/services/: CheckAlignmentChecker.cpp  CheckAlignmentCheckerTest.cpp  CheckFreeThree.cpp  CheckFreeThreeTest.cpp  CheckHeuristicServiceTest.cpp  CheckLegalMoveTest.cpp  CheckWinServiceTest.cpp  test_checkMoveService.cpp
